# chat-bot-gemini

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_gemini_client.py
